--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
 </body>
 
 
-<script src="assets/plugins/common/common.min.js" defer>
+<script src="/assets/plugins/common/common.min.js" defer>
 </script>
-<script src="../src/assets/js/custom.min.js" defer></script>
+<script src="/assets/js/custom.min.js" defer></script>
 
 
 </html>
